# deepracer-track-geometry

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  package.xml  pytest.launch  setup.py
deepracer_track_geometry/: __init__.py  constants.py  track_geometry.py  utils.py
deepracer_track_geometry/routes/: albert.npy  aragon.npy  belille.npy  fuji.npy  monaco_building.npy  roger.npy  spain.npy
test/test_track_geometry/: test_track_geometry.py
